--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/marked": "^5.0.2",
     "@types/dompurify": "^3.0.5",
+    "@types/node": "^20.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
