--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^20.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "tailwindcss": "^3.4.0"
   }
 }
