feat: 重构项目架构并迁移到集中式配置管理
refactor(workflow): 使用 Cloud Function 服务替代直接 Gemini API 调用
feat(config): 新增集中式配置管理系统
refactor(types): 将类型定义迁移到独立模块
style: 清理无用代码和文件
docs: 更新 README 和文档
fix: 修复文件上传和错误处理逻辑

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../types/tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
     "experimentalDecorators": true,
@@ -22,9 +23,15 @@
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "@papermirror/types": [
+        "../types/src/index.ts"
       ]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "references": [
+    { "path": "../types" }
+  ]
 }
