--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-VITE_PROXY_BASE_URL=https://paper-mirror-proxy.vercel.app
+# 本地开发配置
+# 注意：此文件已被 .gitignore 忽略，不要提交到 Git
+
+# Cloud Function 后端地址 (本地调试用)
+VITE_CLOUD_FUNCTION_URL=http://localhost:8080
+
+# 你的应用 Token (必须与后端部署时设置的 APP_TOKEN 一致)
+VITE_APP_TOKEN=my-secret-password-123
