refactor: 迁移类型定义到@papermirror/types并重构相关组件
- 将类型定义从本地types迁移到@papermirror/types包
- 更新tsconfig配置，移除extends并添加@papermirror/prompts引用
- 重构AnalysisReport组件，添加StyleRadarChart可视化
- 更新FileUpload组件支持disabled状态
- 优化workflowService添加引用建议生成
- 添加recharts依赖用于数据可视化

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "../types/tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
     "experimentalDecorators": true,
@@ -26,12 +25,17 @@
       ],
       "@papermirror/types": [
         "../types/src/index.ts"
+      ],
+      "@papermirror/prompts": [
+        "../prompts/src/index.ts"
       ]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
   "references": [
-    { "path": "../types" }
-  ]
+    { "path": "../types" },
+    { "path": "../prompts" }
+  ],
+  "include": ["src/**/*", "components/**/*", "hooks/**/*", "services/**/*", "utils/**/*", "*.ts", "*.tsx"]
 }
