--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "moduleDetection": "force",
     "allowJs": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
