build: 更新模块路径指向node_modules中的编译后文件
将@papermirror/types和@papermirror/prompts的引用路径从本地源码改为node_modules中的编译后文件

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,10 @@
         "./*"
       ],
       "@papermirror/types": [
-        "../types/src/index.ts"
+        "node_modules/@papermirror/types/dist/index.d.ts"
       ],
       "@papermirror/prompts": [
-        "../prompts/src/index.ts"
+        "node_modules/@papermirror/prompts/dist/index.d.ts"
       ]
     },
     "allowImportingTsExtensions": true,
