refactor(配置): 更新模块路径从node_modules到本地src目录
将@papermirror/types和@papermirror/prompts的引用路径从node_modules下的dist目录改为本地src目录下的源文件，以方便开发和调试

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,10 @@
         "./*"
       ],
       "@papermirror/types": [
-        "node_modules/@papermirror/types/dist/index.d.ts"
+        "./src/types/index.ts"
       ],
       "@papermirror/prompts": [
-        "node_modules/@papermirror/prompts/dist/index.d.ts"
+        "./src/prompts/index.ts"
       ]
     },
     "allowImportingTsExtensions": true,
