feat: 添加共享 Prompt 模板和类型定义
1. 在 `src/prompts` 中新增学术论文风格提取、重写、语境分析及报告生成的 Prompt 模板。
2. 在 `src/types` 中新增前后端通用的风格指标、分析报告、错误码及工作流状态等类型定义。
3. 更新 `tsconfig.json` 以包含新创建的目录。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,15 @@
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
-  "include": ["src/**/*", "components/**/*", "hooks/**/*", "services/**/*", "utils/**/*", "*.ts", "*.tsx"]
+  "include": [
+    "src/**/*",
+    "src/types/**/*",
+    "src/prompts/**/*",
+    "components/**/*",
+    "hooks/**/*",
+    "services/**/*",
+    "utils/**/*",
+    "*.ts",
+    "*.tsx"
+  ]
 }
