--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,15 +21,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@papermirror/types": [
-        "./src/types/index.ts"
-      ],
-      "@papermirror/prompts": [
-        "./src/prompts/index.ts"
-      ]
+      "@papermirror/types": ["./src/types/index.ts"],
+      "@papermirror/prompts": ["./src/prompts/index.ts"]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
