feat(shared): 添加共享类型定义和prompts模块
添加@papermirror/types和@papermirror/prompts共享模块，包含类型定义和prompt模板
配置vite别名和tsconfig路径映射以支持共享模块
更新useMigrationWorkflow中的类型检查逻辑

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,14 +21,19 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@papermirror/types": ["./src/types/index.ts"],
-      "@papermirror/prompts": ["./src/prompts/index.ts"]
+      "@papermirror/types": [
+        "./shared/types/src"
+      ],
+      "@papermirror/prompts": [
+        "./shared/prompts/src"
+      ]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
   "include": [
     "src/**/*",
+    "shared/**/*",
     "src/types/**/*",
     "src/prompts/**/*",
     "components/**/*",
