refactor: 重构类型导入路径和错误处理模块
fix(env): 更新生产环境后端地址和APP_TOKEN
fix(tsconfig): 调整类型引用和路径配置
refactor(components): 移除StyleRadarChart组件并简化错误视图
refactor(services): 优化工作流服务逻辑
refactor(hooks): 改进文件类型验证和错误处理
refactor(errors): 重构错误处理模块和类型定义

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../types/tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
     "experimentalDecorators": true,
@@ -19,28 +20,18 @@
     "moduleDetection": "force",
     "allowJs": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
     "paths": {
-      "@papermirror/types": [
-        "./shared/types/src"
+      "@/*": [
+        "./*"
       ],
-      "@papermirror/prompts": [
-        "./shared/prompts/src"
+      "@papermirror/types": [
+        "../types/src/index.ts"
       ]
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
-  "include": [
-    "src/**/*",
-    "shared/**/*",
-    "src/types/**/*",
-    "src/prompts/**/*",
-    "components/**/*",
-    "hooks/**/*",
-    "services/**/*",
-    "utils/**/*",
-    "*.ts",
-    "*.tsx"
+  "references": [
+    { "path": "../types" }
   ]
 }
