--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # 本地开发配置
 # 注意：此文件已被 .gitignore 忽略，不要提交到 Git
 
-# Cloud Function 后端地址 (本地调试用)
-VITE_CLOUD_FUNCTION_URL=http://localhost:8080
+# Cloud Run 后端地址（生产环境）
+VITE_CLOUD_FUNCTION_URL=https://papermirror-7jrd7o5y6q-an.a.run.app
 
 # 你的应用 Token (必须与后端部署时设置的 APP_TOKEN 一致)
-VITE_APP_TOKEN=my-secret-password-123
+VITE_APP_TOKEN=7+PkHfuSJBxf8DYZSW+CbQZYsAq+y8TY+a6M1cNWjUw=
